--- a/source/locale/cs_CZ/LC_MESSAGES/index.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/index.po
@@ -10,25 +10,25 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-20 06:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/teclib/teams/28042/pt_BR/)\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
+"Language-Team: Czech (Czech Republic) (https://www.transifex.com/teclib/teams/28042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: cs_CZ\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: ../../source/index.rst:7
 msgid "GLPI installation"
-msgstr "Instalação do GLPI"
+msgstr "Instalace GLPI"
 
 #: ../../source/index.rst:9
 msgid ""
 "This documentation presents `GLPI <http://glpi-project.org>`_ installation "
 "instructions."
 msgstr ""
-"Esta documentação apresenta `GLPI <http://glpi-project.org>` _ instruções de"
-" instalação."
+"Tento dokument představuje pokyny pro instalaci `GLPI <http://glpi-"
+"project.org>`_ ."
 
 #: ../../source/index.rst:11
 msgid ""
@@ -38,12 +38,11 @@ msgid ""
 "issues, from hardware components and software inventories management to user"
 " helpdesk management."
 msgstr ""
-": abbr: `GLPI (Gestion Libre de Parc Informatique)` é uma solução de "
-"gerenciamento de ativos e helpdesk gratuita (como em \"liberdade de "
-"expressão\" e não como \"cerveja de graça\"!), acessível a partir de um "
-"navegador web criado para gerenciar todos os problemas de gerenciamento de "
-"ativos , desde componentes de hardware e gerenciamento de inventários de "
-"software até o gerenciamento de helpdesk do usuário."
+":abbr:`GLPI (Gestion Libre de Parc Informatique – svobodná správa "
+"počítačového vybavení)` je open source řešení správy majetku a služby "
+"podpory (helpdesk). Ovládá se přes webový prohlížeč a je navržené pro správu"
+" veškerých záležitostí ohledně počítačových zařízení – od hardware, přes "
+"soupis software až po správu služby podpory."
 
 #: ../../source/index.rst:23
 msgid "|ccbyncnd|"
