--- a/source/locale/fr_FR/LC_MESSAGES/update.po
+++ b/source/locale/fr_FR/LC_MESSAGES/update.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-20 13:52+0100\n"
+"POT-Creation-Date: 2018-04-20 06:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Johan Cwiklinski <trasher@x-tnd.be>, 2018\n"
 "Language-Team: French (France) (https://www.transifex.com/teclib/teams/28042/fr_FR/)\n"
@@ -44,16 +44,27 @@ msgstr "sauvegarde de la configuration."
 
 #: ../../source/update.rst:12
 msgid ""
-"GLPI update process is automated. Once a new version will be installed; you "
-"will not be able to use the application until a migration has been done "
-"(from web UI and from command line tools)."
+"GLPI update process is automated. To start it, just go to your GLPI instance"
+" URI, or (recommanded) use the :doc:`command line tools <command-line>`."
 msgstr ""
-"Le processus de mise à jour de GLPI est automatique. Une fois la nouvelle "
-"version installée, il ne sera plus possible de l'utiliser tant que la "
-"migration n'aura pas été effectuée (depuis l'interface web ou depuis la "
-"ligne de commande)."
+"Le processus de mise à jour de GLPI est automatique. Pour le lancer, rendez-"
+"vous sur l'URL de votre instance GLPI, ou (recommandé) utilisez les "
+":doc:`outils en ligne de commande <command-line>`."
+
+#: ../../source/update.rst:14
+msgid ""
+"Once a new version will be installed; you will not be able to use the "
+"application until a migration has been done."
+msgstr ""
+"Une fois la nouvelle version installée, il ne sera plus possible de "
+"l'utiliser tant que la migration n'aura pas été effectuée."
 
 #: ../../source/update.rst:16
+msgid ""
+"Plase also note the update process will automatically disable your plugins."
+msgstr "Veuillez noter également que le processus désactivera vos plugins."
+
+#: ../../source/update.rst:20
 msgid ""
 "You should not try to restore a database backup on a non empty database "
 "(say, a database that has been partially migrated for any reason)."
@@ -61,7 +72,7 @@ msgstr ""
 "Ne pas essayer de restaurer une sauvegarde sur une base non vide (par "
 "exemple, une base partiellement migrée pour quelque raison que ce soit)."
 
-#: ../../source/update.rst:18
+#: ../../source/update.rst:22
 msgid ""
 "Make sure your database is empty before restoring your backup and try to "
 "update, and repeat on fail."
@@ -69,6 +80,6 @@ msgstr ""
 "S'assurer que la base est vide avant de restaurer la sauvegarde et tenter de"
 " mettre à jour, refaire en cas d'échec."
 
-#: ../../source/update.rst:21
+#: ../../source/update.rst:25
 msgid "|ccbyncnd|"
 msgstr "|ccbyncnd|"
