--- a/source/locale/ru_RU/LC_MESSAGES/update.po
+++ b/source/locale/ru_RU/LC_MESSAGES/update.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-20 13:52+0100\n"
+"POT-Creation-Date: 2018-04-20 06:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Language-Team: Russian (Russia) (https://www.transifex.com/teclib/teams/28042/ru_RU/)\n"
 "MIME-Version: 1.0\n"
@@ -41,23 +41,33 @@ msgstr ""
 
 #: ../../source/update.rst:12
 msgid ""
-"GLPI update process is automated. Once a new version will be installed; you "
-"will not be able to use the application until a migration has been done "
-"(from web UI and from command line tools)."
+"GLPI update process is automated. To start it, just go to your GLPI instance"
+" URI, or (recommanded) use the :doc:`command line tools <command-line>`."
+msgstr ""
+
+#: ../../source/update.rst:14
+msgid ""
+"Once a new version will be installed; you will not be able to use the "
+"application until a migration has been done."
 msgstr ""
 
 #: ../../source/update.rst:16
+msgid ""
+"Plase also note the update process will automatically disable your plugins."
+msgstr ""
+
+#: ../../source/update.rst:20
 msgid ""
 "You should not try to restore a database backup on a non empty database "
 "(say, a database that has been partially migrated for any reason)."
 msgstr ""
 
-#: ../../source/update.rst:18
+#: ../../source/update.rst:22
 msgid ""
 "Make sure your database is empty before restoring your backup and try to "
 "update, and repeat on fail."
 msgstr ""
 
-#: ../../source/update.rst:21
+#: ../../source/update.rst:25
 msgid "|ccbyncnd|"
 msgstr ""
